tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__futures__test__emit_futures_codegen@pre-mem2reg@llvm21_1.snap
---
source: tket/tket-qsystem/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i1 @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %read_bool = call i1 @___read_future_bool(i64 %"2_01"), !dbg !9
  call void @___dec_future_refcount(i64 %"2_01"), !dbg !9
  %measure = select i1 %read_bool, i1 true, i1 false, !dbg !9
  store i1 %measure, ptr %"4_0", align 1, !dbg !9
  %"4_02" = load i1, ptr %"4_0", align 1
  store i1 %"4_02", ptr %"0", align 1
  %"03" = load i1, ptr %"0", align 1
  ret i1 %"03"
}

declare i1 @___read_future_bool(i64)

declare void @___dec_future_refcount(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !8}
!7 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!8 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!9 = !DILocation(line: 27062, column: 402, scope: !3)
